testdata/golden/sema/valid/_stub_const_fn_type_contract.sg
// consts, fns, contracts, and types with different visibility (just for import from other modules)

const PRIVATE_CONST = 1;
pub const PUBLIC_CONST = 2;

fn privateFunc() -> int { return 1; }
pub fn publicFunc() -> int { return 2; }

contract PrivateContract {
    fn method() -> int;
}

pub contract PublicContract {
    fn method() -> int;
}

type PrivateType = { value: int }
pub type PublicType = { value: int }